Version 2.1.103
    Fixed a bug where Tree Feller was only rewarding 1 XP per log broken no matter the circumstances
    Fixed an issue with salvage checking the incorrect level requirement
    Updated Italian locale (thanks Leomixer17)
    Fixed grammar in one of the Salvage strings (thanks QuantumToasted)

Version 2.1.102
    Scoreboards will now be removed from players who teleport to a blacklisted world
    Fixed a bug where Rupture could trigger itself

Version 2.1.101
    Fixed an exploit where chorus plants could be used to gain automatic XP
    Added blast furnace, cartography table, grindstone, lectern, loom, scaffolding, smoker, stonecutter, and sweet berry bush to the list of internal blocks that don't trigger tool readying

Version 2.1.100
    Fixed a bug where plants could double drop when the skill was not yet unlocked
    Fixed a bug where plants ALWAYS double dropped
    mcnotify command now checks that it's being executed by a player
    Fixed some concurrency concerns around BleedTasks
    Fixed an NPE that may occur with random chances on a player without loaded data
    Updated Russian locale (thanks myfbone!)

Version 2.1.99
    MASSIVE update to the Russian locale (ru) credit to myfbone
    Debug mode (/mmodebug) will now print info about XP perks and how they are modifying your incoming XP

Version 2.1.98
    Fixed a bug that prevented Taming XP from combat

Version 2.1.97
    mcMMO is compatible with 1.14.4 (Didn't require any changes)
    Fixed a NPE that could occur if a pet participated in combat and its master's mcMMO data was not available
    mcMMO now properly closes its region files as it creates them (thanks Yukiiro-Nite)
    Updated Hungarian locale (thanks andris)

Version 2.1.96
    Added the setting 'Skills.General.LimitBreak.AllowPVE' to advanced.yml to allow Limit Break damage bonus to apply in PVE again, defaults to false
    Updated Limit Break locale strings