@@ -1,8 +1,13 @@
 Version 2.1.103
+    Treasure item amount will default to 1 if not specified instead of breaking mcMMO
+    Fishing treasures will now return the amount defined in treasures config file, an option to randomize amounts will be coming in the future. See notes.
     Fixed a bug where Tree Feller was only rewarding 1 XP per log broken no matter the circumstances
     Fixed an issue with salvage checking the incorrect level requirement
     Updated Italian locale (thanks Leomixer17)
     Fixed grammar in one of the Salvage strings (thanks QuantumToasted)
+
+    NOTES:
+    Sometime in 2014 a decision was made that any fishing treasure over the amount of 1 will be randomized in its yield, while this is not necessarily a bad thing it means control over the drop is a bit random. I've removed this randomness temporarily, in the future you will be able to chose if the amount is randomized or static.
 
 Version 2.1.102
     Scoreboards will now be removed from players who teleport to a blacklisted world
